# MaxFX

./: .gitignore  Cargo.toml  README.md  contracts.txt
mfx-api/: .env  Multi-vs-single-sign.md  package-lock.json  package.json  tsconfig.json
mfx-api/lib/: api.js  execute_position.js  fetchtx.js
mfx-api/lib/support/: positionManager.js
mfx-api/lib/utils/: address-book.js  contract.js  env_config.js  getMaxLend.js  response_parser.js  tx.js
mfx-api/src/: SignOnce_vs_SignMany.md  api.ts  example_preauth_submission.ts  execute_position.ts  fetchtx.ts  preAuth_API.ts
mfx-api/src/support/: positionManager.ts
mfx-api/src/utils/: address-book.ts  contract.ts  env_config.ts  getMaxLend.ts  response_parser.ts  tx.ts
mfx-contracts/: Cargo.toml  Makefile  README.md
mfx-contracts/position-manager/src/: contract.rs  lib.rs  reentry.rs  storage.rs
mfx-contracts/position-manager/src/dependencies/: amm.rs  mod.rs  pool.rs
mfx-frontend/: README.md  index.html  package-lock.json  package.json
mfx-frontend/src/: App.vue
position-api/: package-lock.json  package.json  tsconfig.json
position-api/src/: api.ts
position-api/src/utils/: getMaxLend.ts  tx.ts
position-manager/: Cargo.toml
position-manager/src/: contract.rs  error.rs  lib.rs  math.rs  reentry.rs  soroswap.rs  storage.rs
position-manager/src/dependencies/: amm.rs  blendpool.rs  (+2 more)
posmanager/: README.md  package-lock.json  package.json
posmanager2/: README.md  package-lock.json  package.json
posmanager2/src/: index.ts
reentrancy/: Cargo.toml
reentrancy/src/: lib.rs
wasm/: 2.wasm  pool.wasm
(+2 files in other folders)
