[workspace]
resolver = "2"

members = [
    "position-manager"
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true # DEV: Do not remove this check - doing so will create vulnerabilities
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "21.0.1-preview.3"

[workspace.dependencies.soroban-token-sdk]
version = "21.0.1-preview.3"
